fix(api): return 4xx instead of 500 for invalid requests
- import the project BadRequestException instead of the tomcat one

- map bean validation and constraint violations to 400 with field details

- map InvalidInputException to 400 and DuplicateLikeException to 409

- return a generic 500 message and log the cause instead of leaking it

- order the catch-all advice last so specific handlers keep their responses

- add integration tests covering the error contract